crates/reinhardt-pages/tests/ui/client_form/choices/fail/variant_deserialize_with.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[default]
	Fake,
	#[serde(deserialize_with = "deserialize_live")]
	Live,
}

fn main() {}
